sdm660-common: Add FastRPC support in Root PD of SLPI
Add an argument to sensor PD daemon in SLPI.

Change-Id: Ia2094ae5d4dc3be787ea37e4e76e9a2fd2a5ee54
CRs-Fixed: 2390151

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -889,7 +889,7 @@ service ftmd /vendor/bin/ftmdaemon
     disabled
     oneshot
 
-service vendor.sensors /vendor/bin/sscrpcd
+service vendor.sensors /vendor/bin/sscrpcd sensorspd
     class core
     user system
     group system
