sdm660-common: Change sensors daemon class type to early_hal from core
Change-Id: Iaf3a83028460e9a92dfb1f64994a1fd4f83124d5
Signed-off-by: Joshua Blanchard <joshua.lee.bbg@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -890,10 +890,9 @@ service ftmd /vendor/bin/ftmdaemon
     oneshot
 
 service vendor.sensors /vendor/bin/sscrpcd sensorspd
-    class core
+    class early_hal
     user system
     group system
-    disabled
 
 service vendor.sensors.qti /vendor/bin/sensors.qti
     class core
