init.qcom.rc: add wakelock and BLOCK_SUSPEND to vendor.sensors add wakelock group and BLOCK_SuSPEND capabilities to vendor.sensors to acess wake-lock sysfs nodes
Change-Id: I193836d097f15f5bfbe1645909ae70f3f870f972

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -892,7 +892,8 @@ service ftmd /vendor/bin/ftmdaemon
 service vendor.sensors /vendor/bin/sscrpcd sensorspd
     class early_hal
     user system
-    group system
+    group system wakelock
+    capabilities BLOCK_SUSPEND
 
 service vendor.sensors.qti /vendor/bin/sensors.qti
     class core
