sdm660-common: Convert overlays to RRO
Change-Id: Iba0627fe4a18b2970c6d1e62ddfbc871816c57a9
Signed-off-by: Joshua Blanchard <joshua.lee.bbg@gmail.com>

--- a/overlay/FrameworksMotorolaOverlay/AndroidManifest.xml
+++ b/overlay/FrameworksMotorolaOverlay/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-     Copyright (C) 2016 The CyanogenMod Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2020 Paranoid Android
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,7 +13,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-    <bool name="call_recording_enabled">true</bool>
-    <integer name="call_recording_audio_source">4</integer>
-</resources>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.android.motorola.overlay"
+        android:versionCode="1"
+        android:versionName="1.0">
+        <overlay android:targetPackage="android"
+                android:priority="800"
+                android:isStatic="true" />
+</manifest>
